
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2024 APR 01a
  * in model/share/transport_share.c
    - added _mueN_NH3v()
  * in model/thermo/_generic/electronimpact.c
    - added _EoverN_from_Te_NH3v_Morgan()
    - added _Te_from_EoverN_NH3v_Morgan()
  * in model/transport/doc/report.tex
    - added NH3v reduced mobility documentation
  * in model/thermo/doc/electronimpact.tex
    - added NH3v reduced electric field documentation


2024 MAR 30a
  * in bin/Broslawski.wrp
    - modified control file
    

2024 MAR 29a
  * in bin/Broslawski.wrp
    - improved the control file to add a high conductivity region above the ballast resistance
      region
  * in model/share/transport_share.c
    - added _mueN_H(), _mueN_H2()
  * in model/thermo/_generic/electronimpact.c
    - updated _EoverN_from_Te_H_Morgan()
    - updated _Te_from_EoverN_H_Morgan()
    - added _EoverN_from_Te_H2_Morgan()
    - added _Te_from_EoverN_H2_Morgan()
  * in model/thermo/doc/electronimpact.tex
    - added documentation for H and H2
  * in model/transport/doc/report.tex
    - added documentation for H and H2


2024 MAR 26a
  * in model/chem/_Air_Plasma_11s/rodriguez2024.c
    - added Townsend ionization of N2+, O2+, NO+
    - added three body recombination of N2+, O2+, and NO+
  * in model/chem/_Air_Plasma_11s/doc/report.tex
    - added Townsend ionization of N2+, O2+, NO+ to rodriguez2024 solver
    - added three body recombination of N2+, O2+, and NO+ to rodriguez2024 solver


2024 MAR 25a
  * in model/chem/*/*.c and model/share/chem_share.c
    - added *gl and T parameters to add_to_Qei() and add_to_dQei() functions
  * in model/fluid/_Navier-Stokes_plasma/fluid_source.c
    - in _sigmaes(), added Te=min(50000.0,Te) because the polynomials used to find the cross-section