@@ -580,7 +580,6 @@ static double _EoverN_from_Te_N2(double Te){
     9.05804529498440,
     9.69562262438953,
     10.0010042739407,
-    10.7942349130576,
     11.4313155204774,
     11.9302347337974,
     14.1582412663937,
@@ -595,7 +594,6 @@ static double _EoverN_from_Te_N2(double Te){
     -46.7448490404409,
     -44.4422639474468,
     -43.7491167668869,
-    -42.6505044782188,
     -42.3992270876608,
     -41.6847888630171,
     -39.5409971904059,
@@ -620,7 +618,6 @@ static double _Te_from_EoverN_N2(double EoverN){
     -46.7448490404409,
     -44.4422639474468,
     -43.7491167668869,
-    -42.6505044782188,
     -42.3992270876608,
     -41.6847888630171,
     -39.5409971904059,
@@ -635,7 +632,6 @@ static double _Te_from_EoverN_N2(double EoverN){
     9.05804529498440,
     9.69562262438953,
     10.0010042739407,
-    10.7942349130576,
     11.4313155204774,
     11.9302347337974,
     14.1582412663937,
@@ -654,36 +650,34 @@ static double _EoverN_from_Te_O2(double Te){
   /* log K */
   double Te_data[] = 
   { 
-    5.65766872569018,
-    5.88610403145016,
-    6.47697236288968,
+    6.15485809401642,
     7.39303753139549,
-    8.15517758344238,
     8.64580049989085,
-    9.04443964292862,
     9.45446056757264,
     10.2346191251222,
-    10.4238611247607,
-    11.1022446850151,
-    11.5584838509519,
+    10.9062872740050,
+    11.1835383764881,
+    11.8792632932909,
+    12.6549872537726,
+    13.6691438195424,
+    14.3029333748767,
     15.4249484703984
   };
   /* log Vm^2*/
   double EoverN_data[] = 
   {
     -50.6568720458690,
-    -50.0690853809669,
-    -49.4041090773736,
     -48.3542869528750,
-    -47.2556746642069,
     -46.7448490404409,
-    -46.4083768038197,
     -46.0517018598809,
     -44.9530895712128,
-    -44.4422639474468,
-    -43.1820998634711,
-    -42.4532943089311,
-    -39.1439465808988
+    -43.5718077519165,
+    -43.0405884842886,
+    -41.9779001988901,
+    -40.9153153604791,
+    -39.8524104655706,
+    -39.3210418187212,
+    -38.7384814727906
   };
   
   int N = sizeof(Te_data)/sizeof(Te_data[0]);
@@ -699,34 +693,32 @@ static double _Te_from_EoverN_O2(double EoverN){
   double EoverN_data[] = 
   { 
     -50.6568720458690,
-    -50.0690853809669,
-    -49.4041090773736,
     -48.3542869528750,
-    -47.2556746642069,
     -46.7448490404409,
-    -46.4083768038197,
     -46.0517018598809,
     -44.9530895712128,
-    -44.4422639474468,
-    -42.6615654255782,
-    -42.4532943089311,
-    -32.9293384824766
+    -43.5718077519165,
+    -43.0405884842886,
+    -41.9779001988901,
+    -40.9153153604791,
+    -39.8524104655706,
+    -39.3210418187212,
+    -38.7384814727906
   };
   /* log K */
   double Te_data[] = 
   { 
-    5.65766872569018,
-    5.88610403145016,
-    6.47697236288968,
+    6.15485809401642,
     7.39303753139549,
-    8.15517758344238,
     8.64580049989085,
-    9.04443964292862,
     9.45446056757264,
     10.2346191251222,
-    10.4238611247607,
-    11.4209369942094,
-    11.5584838509519,
+    10.9062872740050,
+    11.1835383764881,
+    11.8792632932909,
+    12.6549872537726,
+    13.6691438195424,
+    14.3029333748767,
     15.4249484703984
   };
 
