@@ -432,16 +432,16 @@ The reduced electric field results are shown in Fig. \ref{fig:electronimpact_NH3
   &  & ${\rm ln}~E^\star$     & \tiny  -55.2620  -54.4162  -53.5703  -51.4558  -49.7641  -48.9182  -48.0721  -47.2264  -46.3806  -45.1117  -44.2660  -43.4205  -42.5745  -40.8824  -39.0042\\     
   \midrule    
   
-  \multirow{2}{*}{3} &  \multirow{2}{*}{ $\rm e^- + N_2 $   } & ${\rm ln}~T_{\rm e}$  & \tiny      5.7836    5.8854    6.0067    6.1891    7.0566    7.5266    7.7497    8.0862    8.8649    9.0580    9.1848    9.2866    9.5415    9.6956    9.7646   10.0010   10.6517   12.7964   15.4249
+  \multirow{2}{*}{3} &  \multirow{2}{*}{ $\rm e^- + N_2 $   } & ${\rm ln}~T_{\rm e}$  & \tiny          5.7836    6.0067    7.0566    9.0580    9.6956   10.0010   11.4313   11.9302   14.1582   15.4249
 \\
-  &  & ${\rm ln}~E^\star$     & \tiny     -51.8608  -51.3500  -51.0135  -50.6569  -49.5583  -49.0474  -48.7110  -48.3543  -47.2557  -46.7448  -46.4084  -46.0517  -44.9531  -44.4423  -44.1058  
- \\     
-  &  &       & \tiny     -43.7491  -43.3907  -40.6829  -39.1439\\
+  &  & ${\rm ln}~E^\star$     & \tiny       -51.8608  -51.0135  -49.5583  -46.7448  -44.4423  -43.7491  -42.3992  -41.6848  -39.5410  -38.7385
+\\
   \midrule  
   
-  \multirow{2}{*}{4} &  \multirow{2}{*}{ $\rm e^- + O_2  $   } & ${\rm ln}~T_{\rm e}$  & \tiny     5.6577    5.8861    6.4770    7.3930    8.1552    8.6458    9.0444    9.4545   10.2346   10.4239   11.1022   11.5585   15.4249
-  \\
-  &  & ${\rm ln}~E^\star$     & \tiny    -50.6569  -50.0691  -49.4041  -48.3543  -47.2557  -46.7448  -46.4084  -46.0517  -44.9531  -44.4423  -43.1821  -42.4533  -39.1439
+  \multirow{2}{*}{4} &  \multirow{2}{*}{ $\rm e^- + O_2  $   } & ${\rm ln}~T_{\rm e}$  & \tiny         6.1549    7.3930    8.6458    9.4545   10.2346   10.9063   11.1835   11.8793   12.6550   13.6691   14.3029   15.4249 \\ 
+
+  &  & ${\rm ln}~E^\star$     & \tiny      -50.6569  -48.3543  -46.7448  -46.0517  -44.9531  -43.5718  -43.0406  -41.9779  -40.9153  -39.8524  -39.3210  -38.7385
+
   \\     
   \midrule  
   
